# biology-rs

./: .gitignore  Cargo.toml  README.md  config.toml
src/: bio.rs  dna.bed  gen.fa  main.rs
