[package]
name = "biology"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bio="*"
nanorand="*"
mimalloc = "0.1.32"
[profile.release]
lto = true
opt-level=3
strip = true
debug=false
debug-assertions=false
